<?xml version="1.0"?>
<package>
  <name>geomagic_manipulator_teleoperation</name>
  <version>0.9.0</version>
  <description>Notte dei ricercatori.</description>

  <author email="damjan.miklic@unimore.it">Damjan Miklic</author>
  <maintainer email="damjan.miklic@unimore.ikt">Damjan Miklic</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>omni_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>omni_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
